--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ description = "automatically generates ABI configuration files for linkers"
 clap = {version = "2.32", features = ["yaml", "suggestions", "color"]}
 goblin = "0.0.19"
 itertools = "0.7"
+yaml-rust = "0.4"
+custom_error = "1.3"
+regex = "1"
